force-app/main/default/objects/FEC_Case_Channel__c/FEC_Case_Channel__c.object-meta.xml
<CustomObject>
    <label>FEC Case Channel</label>
    <nameField>
        <label>Case Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC Case Channel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>