force-app/main/default/objects/FEC_Case_Channel__c/fields/FEC_Self_Service_Flag__c.field-meta.xml
<CustomField>
    <fullName>FEC_Self_Service_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self-Service Flag</label>
    <type>Checkbox</type>
</CustomField>