force-app/main/default/objects/FEC_Case_Channel__c/fields/FEC_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FEC_Status</label>
    <type>Checkbox</type>
</CustomField>